--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
         <p>© <span id="currentYear"></span> 🧑‍💻 Oswell Okine 🌍 Ghana</p>
         <p>Last Modification: <span id="lastModified"></span></p>
     </footer>
-    <script src="scripts/getdates.js"></script> 
+    <script src="scripts/getdates.js" defer></script> 
 </body>
 </html>
