Used Hover pseudo class on nav anchor tags. Adjusted meta description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Homepage of Dynamic Web Fundamentals - Oswell Okine">
+    <meta name="description" content="Homepage of WDD 131 Dynamic Web Fundamentals for Oswell Okine">
     <meta name="author" content="Oswell Okine">
     <title>WDD 131 - Dynamic Web Fundamentals - Oswell Okine</title>
     <link rel="stylesheet" href="styles/base.css">
