--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WDD 131 - Media Query Example</title>
     <meta name="description" content="Media query learning activity example page">
     <meta name="author" content="Oswell Okine">
     <link rel="preconnect" href="https://fonts.googleapis.com">
