--- a/temples.html
+++ b/temples.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temple Album</title>
-    <meta name="description" content="Temple Album Project for Oswell Okine">
+    <meta name="description" content="Temple Album Project Homepage for Oswell Okine">
     <meta name="author" content="Oswell Okine">
     <link rel="stylesheet" href="styles/temples.css" media="all">
     <link rel="stylesheet" href="styles/temples-large.css" media="all">
