--- a/place.html
+++ b/place.html
@@ -23,7 +23,7 @@
         <picture>
             <source media="(min-width: 1000px)" srcset="/images/hero-large.webp">
             <source media="(min-width: 750px)" srcset="images/hero-medium.webp">
-            <img src="images/hero-small.webp" alt="Independence Square - Accra" width="500" height="250">
+            <img src="images/hero-large.webp" alt="Independence Square - Accra">
         </picture>
         <section class="card data">
             <h2>Data</h2>
