--- a/place.html
+++ b/place.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Homepage of Ghana, the place I live">
     <meta name="author" content="Oswell Okine">
-    <title>Ghana</title>
+    <title>My Country Ghana </title>
     <link rel="stylesheet" href="styles/place.css">
     <link rel="stylesheet" href="styles/place-large.css">
     <script src="scripts/getdates.js" defer></script>
@@ -23,7 +23,7 @@
         <picture>
             <source media="(min-width: 1000px)" srcset="/images/hero-large.webp">
             <source media="(min-width: 750px)" srcset="images/hero-medium.webp">
-            <img src="images/hero-large.webp" alt="Independence Square - Accra">
+            <img src="images/hero-small.webp" alt="Independence Square - Accra">
         </picture>
         <section class="card data">
             <h2>Data</h2>
