--- a/place.html
+++ b/place.html
@@ -20,11 +20,14 @@
     </header>
     <aside></aside>
     <main>
-        <picture>
-            <source media="(min-width: 1000px)" srcset="/images/hero-large.webp">
-            <source media="(min-width: 750px)" srcset="images/hero-medium.webp">
-            <img src="images/hero-small.webp" alt="Independence Square - Accra">
-        </picture>
+        <div class="hero">
+            <picture>
+                <source media="(min-width: 1000px)" srcset="/images/hero-large.webp">
+                <source media="(min-width: 750px)" srcset="images/hero-medium.webp">
+                <img src="images/hero-small.webp" alt="Independence Square - Accra">
+            </picture>
+        </div>
+        
         <section class="card data">
             <h2>Data</h2>
             <div class="col-2">
