--- a/place.html
+++ b/place.html
@@ -22,7 +22,7 @@
     <main>
         <div class="hero">
             <picture>
-                <source media="(min-width: 1000px)" srcset="/images/hero-large.webp">
+                <source media="(min-width: 1000px)" srcset="images/hero-large.webp">
                 <source media="(min-width: 750px)" srcset="images/hero-medium.webp">
                 <img src="images/hero-small.webp" alt="Independence Square - Accra">
             </picture>
