Fixed URL issues with css

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Siteplan for Oswell's Book Recommendation Site">
     <meta name="author" content="Oswell Okine">
     <title>Oswell Book Recommendation Hub</title>
-    <link rel="stylesheet" href="/styles/siteplan.css">
+    <link rel="stylesheet" href="styles/siteplan.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
@@ -35,11 +35,11 @@
 
     <label>Wireframe:</label>
     <figure>
-        <img src="/images/siteplan-mobile.webp" alt="siteplan-mobile">
+        <img src="images/siteplan-mobile.webp" alt="siteplan-mobile">
         <figcaption>Siteplan - Mobile View</figcaption>
     </figure>
     <figure>
-        <img src="/images/siteplan-desktop.webp" alt="siteplan-desktop">
+        <img src="images/siteplan-desktop.webp" alt="siteplan-desktop">
         <figcaption>Siteplan - Desktop View</figcaption>
     </figure>
     
