Changed file URLs

--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
     <title>Product Review Form</title>
     <link rel="stylesheet" href="styles/form.css">
     <script src="scripts/form.js" defer></script>
-    <script src="scripts/getdate.js" defer></script>
+    <script src="scripts/getdates.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Poppins:ital,wght@0,400;0,500;0,600;1,300&display=swap" rel="stylesheet"><body>
