--- a/form.html
+++ b/form.html
@@ -11,7 +11,9 @@
     <script src="scripts/getdates.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Poppins:ital,wght@0,400;0,500;0,600;1,300&display=swap" rel="stylesheet"><body>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Poppins:ital,wght@0,400;0,500;0,600;1,300&display=swap" rel="stylesheet">
+</head>
+<body>
     <header>
         <h1>Product Review</h1>
     </header>
@@ -63,5 +65,6 @@
     <footer>
         <p>© <span id="currentYear"></span> 🧑‍💻 Oswell Okine 🌍 Ghana</p>
         <p>Last Modification: <span id="lastModified"></span></p>
-    </footer></body>
+    </footer>
+</body>
 </html>
