Adjusted Books Display

--- a/project/bookrec.html
+++ b/project/bookrec.html
@@ -35,8 +35,8 @@
             <h2>Book Recommendations</h2>
     
         <!-- Filter Dropdown -->
-            <label class="genreFilter"><strong>Filter by Genre: </strong>
-                <select name="genre" id="genreFilter" required>
+            <label class="categoryFilter"><strong>Filter by Category </strong>
+                <select name="category" id="categoryFilter" required>
                     <option value="" disabled selected>Select ...</option>
                 </select>
             </label>
