Fixed HTML validation errors

--- a/project/bookrec.html
+++ b/project/bookrec.html
@@ -48,7 +48,7 @@
             <h2>Add a New Book</h2>
             <form id="bookForm">
                 <label><strong>Title</strong><input type="text" id="title" placeholder="Book Title" required></label>
-                <label><strong>Author</strong></strong><input type="text" id="author" placeholder="Author" required></label>
+                <label><strong>Author</strong><input type="text" id="author" placeholder="Author" required></label>
 
                 <label><strong>Category</strong>
                     <select name="category" id="category" required>
